Fixed filter items height on mobile

--- a/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
+++ b/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
@@ -51,6 +51,7 @@
       height: 80px
     @media(max-width: 580px) 
       flex-direction: column 
+      padding-bottom: 20px
 
 
     .filter
@@ -61,9 +62,6 @@
       font-size: 18px
       border-radius: 10px
       padding: 10px
-      @media(max-width: 1000px)
-        height: 20px
-        margin: 0 5px
       @media(max-width: 580px) 
         margin: 0
         padding: 2px
@@ -82,8 +80,9 @@
       background-color: #4e618d
       color: white
       @media(max-width: 1000px)
-        height: 20px
-        margin: 0 5px
+        height: 35px          
+        margin: 20 5px 5px 0
+        padding: 8px 10px 
       @media(max-width: 580px) 
-        margin: 0
         padding: 2px
+  
